--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             margin-bottom: 2em;
         }
 
+        #contact {
+          margin-bottom: 3em;
+        }
+
         footer {
             background-color: #333;
             color: #fff;
